--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ repository: hellojs-tw/blog   # ex. DONGChuan/DONGChuan.github.io
 # The base hostname & protocol for your site
 # For local test, please use http://localhost:4000
 # For production, use your github page url. ex. http://dongchuan.github.io
-url: http://localhost:4000
+url: https://hellojs-tw.github.io/blog/
 
 ## Gem
 gems:
